# LuoXiaoHeiPet

./: .gitignore  CLAUDE.md  README.md  README_CN.md  index.html  package-lock.json  package.json
.claude/rules/: commit.md
.github/workflows/: release.yml
Xiaohei/: .gitignore
Xiaohei/Animation/: AnimationEngine.swift  AnimationState.swift
Xiaohei/Chat/: ChatManager.swift
Xiaohei/Core/: PetWindow.swift
Xiaohei/LLM/: FileToolService.swift  LLMConfig.swift  TTSService.swift
Xiaohei/Xiaohei/: Info.plist  XiaoheiApp.swift
Xiaohei/Xiaohei.xcodeproj/: project.pbxproj
Xiaohei/Xiaohei/Chat/: ChatBubbleWindow.swift
Xiaohei/Xiaohei/Core/: PetView.swift  PetViewController.swift
Xiaohei/Xiaohei/LLM/: LLMService.swift  VolcanoEngineService.swift
Xiaohei/tools/: generate_placeholder.py  generate_xiaohei_v2.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  file_tools.rs  llm.rs  memory.rs  mod.rs  tts.rs
src-tauri/src/models/: chat.rs  config.rs  memory.rs
src-tauri/src/services/: file_tool_service.rs  memory_manager.rs  mod.rs  tts_service.rs  volcano_engine.rs
src/components/pet/: PetCanvas.tsx  (+2 more)
src/hooks/: useAnimationEngine.ts  useChatManager.ts  useDrag.ts
src/services/: animationLoader.ts  tauriCommands.ts
src/styles/: globals.css
src/types/: animation.ts  chat.ts  config.ts
tools/: build_xiaohei_assets.py  convert_assets.py  generate_xiaohei_v2.py  requirements.txt  xiaohei_asset_sources.json
(+11 files in other folders)
